--- a/index.html
+++ b/index.html
@@ -19,8 +19,16 @@
     <div class="meio">
         <div class="container-pratos">
             <h2 class="titulo">Primeiro, seu prato</h2>
-            <div class="menu-pratos">
-                <div class="prato">
+            <div class="menu-pratos-principais">
+                <div class="prato  princ-1" onclick="Check('.menu-pratos-principais', '.princ-1')">
+                    <img class="prato-img"  src="./imagens/frango_yin_yang.png" alt="">
+                    <h3>Frango Yin Yang</h3>
+                    <h4>Um pouco de batata, um pouco de salada</h4>
+                    <div>
+                    <h5>R$</h5> <h5 class="preco">14,90</h5>
+                    </div>
+                </div>
+                <div class="prato  princ-2" onclick="Check('.menu-pratos-principais','.princ-2')">
                     <img class="prato-img" src="./imagens/frango_yin_yang.png" alt="">
                     <h3>Frango Yin Yang</h3>
                     <h4>Um pouco de batata, um pouco de salada</h4>
@@ -28,7 +36,7 @@
                     <h5>R$</h5> <h5 class="preco">14,90</h5>
                     </div>
                 </div>
-                <div class="prato">
+                <div class="prato  princ-3" onclick="Check('.menu-pratos-principais','.princ-3')">
                     <img class="prato-img" src="./imagens/frango_yin_yang.png" alt="">
                     <h3>Frango Yin Yang</h3>
                     <h4>Um pouco de batata, um pouco de salada</h4>
@@ -36,7 +44,7 @@
                     <h5>R$</h5> <h5 class="preco">14,90</h5>
                     </div>
                 </div>
-                <div class="prato">
+                <div class="prato  princ-4" onclick="Check('.menu-pratos-principais','.princ-4')">
                     <img class="prato-img" src="./imagens/frango_yin_yang.png" alt="">
                     <h3>Frango Yin Yang</h3>
                     <h4>Um pouco de batata, um pouco de salada</h4>
@@ -44,7 +52,7 @@
                     <h5>R$</h5> <h5 class="preco">14,90</h5>
                     </div>
                 </div>
-                <div class="prato">
+                <div class="prato  princ-5" onclick="Check('.menu-pratos-principais','.princ-5')">
                     <img class="prato-img" src="./imagens/frango_yin_yang.png" alt="">
                     <h3>Frango Yin Yang</h3>
                     <h4>Um pouco de batata, um pouco de salada</h4>
@@ -52,15 +60,7 @@
                     <h5>R$</h5> <h5 class="preco">14,90</h5>
                     </div>
                 </div>
-                <div class="prato">
-                    <img class="prato-img" src="./imagens/frango_yin_yang.png" alt="">
-                    <h3>Frango Yin Yang</h3>
-                    <h4>Um pouco de batata, um pouco de salada</h4>
-                    <div>
-                    <h5>R$</h5> <h5 class="preco">14,90</h5>
-                    </div>
-                </div>
-                <div class="prato">
+                <div class="prato  princ-6" onclick="Check('.menu-pratos-principais','.princ-6')">
                     <img class="prato-img" src="./imagens/frango_yin_yang.png" alt="">
                     <h3>Frango Yin Yang</h3>
                     <h4>Um pouco de batata, um pouco de salada</h4>
@@ -72,8 +72,8 @@
         </div>
         <div class="container-pratos">
             <h2 class="titulo">Agora, sua bebida</h2>
-            <div class="menu-pratos">
-                <div class="prato">
+            <div class="menu-bebidas">
+                <div class="prato beb-1" onclick="Check('.menu-bebidas','.beb-1')">
                     <img class="prato-img" src="./imagens/coca-cola.png" alt="">
                     <h3>Coquinha gelada</h3>
                     <h4>Lata 350ml</h4>
@@ -81,7 +81,7 @@
                     <h5>R$</h5> <h5 class="preco">4,90</h5>
                     </div>
                 </div>
-                <div class="prato">
+                <div class="prato beb-2" onclick="Check('.menu-bebidas','.beb-2')">
                     <img class="prato-img" src="./imagens/coca-cola.png" alt="">
                     <h3>Coquinha gelada</h3>
                     <h4>Lata 350ml</h4>
@@ -89,7 +89,7 @@
                     <h5>R$</h5> <h5 class="preco">4,90</h5>
                     </div>
                 </div>
-                <div class="prato">
+                <div class="prato beb-3" onclick="Check('.menu-bebidas','.beb-3')">
                     <img class="prato-img" src="./imagens/coca-cola.png" alt="">
                     <h3>Coquinha gelada</h3>
                     <h4>Lata 350ml</h4>
@@ -97,7 +97,7 @@
                     <h5>R$</h5> <h5 class="preco">4,90</h5>
                     </div>
                 </div>
-                <div class="prato">
+                <div class="prato beb-4" onclick="Check('.menu-bebidas','.beb-4')">
                     <img class="prato-img" src="./imagens/coca-cola.png" alt="">
                     <h3>Coquinha gelada</h3>
                     <h4>Lata 350ml</h4>
@@ -105,7 +105,7 @@
                     <h5>R$</h5> <h5 class="preco">4,90</h5>
                     </div>
                 </div>
-                <div class="prato">
+                <div class="prato beb-5" onclick="Check('.menu-bebidas','.beb-5')">
                     <img class="prato-img" src="./imagens/coca-cola.png" alt="">
                     <h3>Coquinha gelada</h3>
                     <h4>Lata 350ml</h4>
@@ -113,7 +113,7 @@
                     <h5>R$</h5> <h5 class="preco">4,90</h5>
                     </div>
                 </div>
-                <div class="prato">
+                <div class="prato beb-6" onclick="Check('.menu-bebidas','.beb-6')">
                     <img class="prato-img" src="./imagens/coca-cola.png" alt="">
                     <h3>Coquinha gelada</h3>
                     <h4>Lata 350ml</h4>
@@ -125,8 +125,8 @@
         </div>
         <div class="container-pratos container-final">
             <h2 class="titulo">Por fim, sua sobremesa</h2>
-            <div class="menu-pratos">
-                <div class="prato">
+            <div class="menu-sobremesas">
+                <div class="prato  sob-1" onclick="Check('.menu-sobremesas','.sob-1')">
                     <img class="prato-img" src="./imagens/pudim.png" alt="">
                     <h3>Pudim</h3>
                     <h4>Apenas pudim</h4>
@@ -134,7 +134,7 @@
                     <h5>R$</h5> <h5 class="preco">7,90</h5>
                     </div>
                 </div>
-                <div class="prato">
+                <div class="prato  sob-2 " onclick="Check('.menu-sobremesas','.sob-2')">
                     <img class="prato-img" src="./imagens/pudim.png" alt="">
                     <h3>Pudim</h3>
                     <h4>Apenas pudim</h4>
@@ -142,7 +142,7 @@
                     <h5>R$</h5> <h5 class="preco">7,90</h5>
                     </div>
                 </div>
-                <div class="prato">
+                <div class="prato  sob-3 " onclick="Check('.menu-sobremesas','.sob-3')">
                     <img class="prato-img" src="./imagens/pudim.png" alt="">
                     <h3>Pudim</h3>
                     <h4>Apenas pudim</h4>
@@ -150,7 +150,7 @@
                     <h5>R$</h5> <h5 class="preco">7,90</h5>
                     </div>
                 </div>
-                <div class="prato">
+                <div class="prato  sob-4 " onclick="Check('.menu-sobremesas','.sob-4')">
                     <img class="prato-img" src="./imagens/pudim.png" alt="">
                     <h3>Pudim</h3>
                     <h4>Apenas pudim</h4>
@@ -158,7 +158,7 @@
                     <h5>R$</h5> <h5 class="preco">7,90</h5>
                     </div>
                 </div>
-                <div class="prato">
+                <div class="prato  sob-5 " onclick="Check('.menu-sobremesas','.sob-5')">
                     <img class="prato-img" src="./imagens/pudim.png" alt="">
                     <h3>Pudim</h3>
                     <h4>Apenas pudim</h4>
@@ -166,7 +166,7 @@
                     <h5>R$</h5> <h5 class="preco">7,90</h5>
                     </div>
                 </div>
-                <div class="prato">
+                <div class="prato  sob-6 " onclick="Check('.menu-sobremesas','.sob-6')">
                     <img class="prato-img" src="./imagens/pudim.png" alt="">
                     <h3>Pudim</h3>
                     <h4>Apenas pudim</h4>
@@ -180,6 +180,6 @@
     <div class="menu-inferior">
         <button>Selecione os 3 itens para fechar o pedido</button>
     </div>
-    
+    <script src="./script.js"></script>  
 </body>
 </html>
