Implementada a pagina de confirmacao

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <h3>Frango Yin Yang</h3>
                     <h4>Um pouco de batata, um pouco de salada</h4>
                     <div>
-                    <h5>R$</h5> <h5 class="preco">1,90</h5>
+                    <h5>R$</h5> <h5 class="preco">15,99</h5>
                     </div>
                 </div>
                 <div class="prato  princ-2" onclick="Check('.menu-pratos-principais','.princ-2')">
@@ -41,7 +41,7 @@
                     <h3>Frango Yin Yang</h3>
                     <h4>Um pouco de batata, um pouco de salada</h4>
                     <div>
-                    <h5>R$</h5> <h5 class="preco">14,90</h5>
+                    <h5>R$</h5> <h5 class="preco">14,99</h5>
                     </div>
                 </div>
                 <div class="prato  princ-4" onclick="Check('.menu-pratos-principais','.princ-4')">
@@ -49,7 +49,7 @@
                     <h3>Frango Yin Yang</h3>
                     <h4>Um pouco de batata, um pouco de salada</h4>
                     <div>
-                    <h5>R$</h5> <h5 class="preco">14,90</h5>
+                    <h5>R$</h5> <h5 class="preco">23,90</h5>
                     </div>
                 </div>
                 <div class="prato  princ-5" onclick="Check('.menu-pratos-principais','.princ-5')">
@@ -57,7 +57,7 @@
                     <h3>Frango Yin Yang</h3>
                     <h4>Um pouco de batata, um pouco de salada</h4>
                     <div>
-                    <h5>R$</h5> <h5 class="preco">14,90</h5>  
+                    <h5>R$</h5> <h5 class="preco">17,90</h5>  
                     </div>
                 </div>
                 <div class="prato  princ-6" onclick="Check('.menu-pratos-principais','.princ-6')">
@@ -65,7 +65,7 @@
                     <h3>Frango Yin Yang</h3>
                     <h4>Um pouco de batata, um pouco de salada</h4>
                     <div>
-                    <h5>R$</h5> <h5 class="preco">14,90</h5>
+                    <h5>R$</h5> <h5 class="preco">25,90</h5>
                     </div>
                 </div>
             </div>
@@ -94,7 +94,7 @@
                     <h3>Coquinha gelada</h3>
                     <h4>Lata 350ml</h4>
                     <div>
-                    <h5>R$</h5> <h5 class="preco">7,90</h5>
+                    <h5>R$</h5> <h5 class="preco">3,55</h5>
                     </div>
                 </div>
                 <div class="prato beb-4" onclick="Check('.menu-bebidas','.beb-4')">
@@ -102,7 +102,7 @@
                     <h3>Coquinha gelada</h3>
                     <h4>Lata 350ml</h4>
                     <div>
-                    <h5>R$</h5> <h5 class="preco">4,90</h5>
+                    <h5>R$</h5> <h5 class="preco">6,80</h5>
                     </div>
                 </div>
                 <div class="prato beb-5" onclick="Check('.menu-bebidas','.beb-5')">
@@ -110,7 +110,7 @@
                     <h3>Coquinha gelada</h3>
                     <h4>Lata 350ml</h4>
                     <div>
-                    <h5>R$</h5> <h5 class="preco">4,90</h5>
+                    <h5>R$</h5> <h5 class="preco">2,99</h5>
                     </div>
                 </div>
                 <div class="prato beb-6" onclick="Check('.menu-bebidas','.beb-6')">
@@ -118,7 +118,7 @@
                     <h3>Coquinha gelada</h3>
                     <h4>Lata 350ml</h4>
                     <div>
-                    <h5>R$</h5> <h5 class="preco">4,90</h5>
+                    <h5>R$</h5> <h5 class="preco">4,50</h5>
                     </div>
                 </div>
             </div>
@@ -139,7 +139,7 @@
                     <h3>Pudim</h3>
                     <h4>Apenas pudim</h4>
                     <div>
-                    <h5>R$</h5> <h5 class="preco">7,90</h5>
+                    <h5>R$</h5> <h5 class="preco">8,50</h5>
                     </div>
                 </div>
                 <div class="prato  sob-3 " onclick="Check('.menu-sobremesas','.sob-3')">
@@ -147,7 +147,7 @@
                     <h3>Pudim</h3>
                     <h4>Apenas pudim</h4>
                     <div>
-                    <h5>R$</h5> <h5 class="preco">7,90</h5>
+                    <h5>R$</h5> <h5 class="preco">6,80</h5>
                     </div>
                 </div>
                 <div class="prato  sob-4 " onclick="Check('.menu-sobremesas','.sob-4')">
@@ -155,7 +155,7 @@
                     <h3>Pudim</h3>
                     <h4>Apenas pudim</h4>
                     <div>
-                    <h5>R$</h5> <h5 class="preco">7,90</h5>
+                    <h5>R$</h5> <h5 class="preco">7,20</h5>
                     </div>
                 </div>
                 <div class="prato  sob-5 " onclick="Check('.menu-sobremesas','.sob-5')">
@@ -163,7 +163,7 @@
                     <h3>Pudim</h3>
                     <h4>Apenas pudim</h4>
                     <div>
-                    <h5>R$</h5> <h5 class="preco">7,90</h5>
+                    <h5>R$</h5> <h5 class="preco">7,40</h5>
                     </div>
                 </div>
                 <div class="prato  sob-6 " onclick="Check('.menu-sobremesas','.sob-6')">
@@ -171,7 +171,7 @@
                     <h3>Pudim</h3>
                     <h4>Apenas pudim</h4>
                     <div>
-                    <h5>R$</h5> <h5 class="preco">7,90</h5>
+                    <h5>R$</h5> <h5 class="preco">10,00</h5>
                     </div>
                 </div>
             </div>
@@ -179,7 +179,28 @@
     </div>
     <div class="menu-inferior">
         <button>Selecione os 3 itens para fechar o pedido</button>
+        <button class="finalizar escondido" onclick="FinalizarPedido()">Finalizar pedido</button>
     </div>
+    <div class="confirmacao escondido">
+        <h3>Confirme seu pedido</h3>
+        <div>
+            <h5>Frango Yin Yang</h5><h5 class="vprinc"> valorPrincipal</h5>
+        </div>
+        <div>
+            <h5>Frango Yin Yang</h5><h5 class="vbeb"> valorPrincipal</h5>
+        </div>
+        <div>
+            <h5>Frango Yin Yang</h5><h5 class="vsob"> valorPrincipal</h5>
+        </div>
+        <div>
+            <h3>Total</h3><h3 class="vtotal"> valorPrincipal</h3>
+        </div>
+        <div class =pode-pedir><h3> Tudo certo, pode pedir!</h3></div>
+        <h3 class ="cancela" onclick="window.location.reload()">Cancelar</h3>
+        
+        
+    </div>
+    <div class="blur escondido"></div>
     <script src="./script.js"></script>  
 </body>
 </html>
