--- a/index.html
+++ b/index.html
@@ -20,52 +20,52 @@
         <div class="container-pratos">
             <h2 class="titulo">Primeiro, seu prato</h2>
             <div class="menu-pratos-principais">
-                <div class="prato  princ-1" onclick="Check('.menu-pratos-principais', '.princ-1')">
+                <div class="prato  princ-1" data-test="dish" onclick="Check('.menu-pratos-principais', '.princ-1')">
                     <img class="prato-img"  src="./imagens/frango_yin_yang.png" alt="">
                     <h3>Frango Yin Yang</h3>
                     <h4>Um pouco de batata, um pouco de salada</h4>
                     <div>
-                    <h5>R$</h5> <h5 class="preco">15,99</h5>
+                    <h5>R$</h5> <h5 class="preco" data-test="item-price" >15,99</h5>
                     </div>
                 </div>
-                <div class="prato  princ-2" onclick="Check('.menu-pratos-principais','.princ-2')">
+                <div class="prato  princ-2" data-test="dish" onclick="Check('.menu-pratos-principais','.princ-2')">
                     <img class="prato-img" src="./imagens/frango_yin_yang.png" alt="">
                     <h3>Frango Yin Yang</h3>
                     <h4>Um pouco de batata, um pouco de salada</h4>
                     <div>
-                    <h5>R$</h5> <h5 class="preco">20,90</h5>
+                    <h5>R$</h5> <h5 class="preco" data-test="item-price" >20,90</h5>
                     </div>
                 </div>
-                <div class="prato  princ-3" onclick="Check('.menu-pratos-principais','.princ-3')">
+                <div class="prato  princ-3" data-test="dish" onclick="Check('.menu-pratos-principais','.princ-3')">
                     <img class="prato-img" src="./imagens/frango_yin_yang.png" alt="">
                     <h3>Frango Yin Yang</h3>
                     <h4>Um pouco de batata, um pouco de salada</h4>
                     <div>
-                    <h5>R$</h5> <h5 class="preco">14,99</h5>
+                    <h5>R$</h5> <h5 class="preco" data-test="item-price" >14,99</h5>
                     </div>
                 </div>
-                <div class="prato  princ-4" onclick="Check('.menu-pratos-principais','.princ-4')">
+                <div class="prato  princ-4" data-test="dish" onclick="Check('.menu-pratos-principais','.princ-4')">
                     <img class="prato-img" src="./imagens/frango_yin_yang.png" alt="">
                     <h3>Frango Yin Yang</h3>
                     <h4>Um pouco de batata, um pouco de salada</h4>
                     <div>
-                    <h5>R$</h5> <h5 class="preco">23,90</h5>
+                    <h5>R$</h5> <h5 class="preco" data-test="item-price" >23,90</h5>
                     </div>
                 </div>
-                <div class="prato  princ-5" onclick="Check('.menu-pratos-principais','.princ-5')">
+                <div class="prato  princ-5" data-test="dish" onclick="Check('.menu-pratos-principais','.princ-5')">
                     <img class="prato-img" src="./imagens/frango_yin_yang.png" alt="">
                     <h3>Frango Yin Yang</h3>
                     <h4>Um pouco de batata, um pouco de salada</h4>
                     <div>
-                    <h5>R$</h5> <h5 class="preco">17,90</h5>  
+                    <h5>R$</h5> <h5 class="preco" data-test="item-price" >17,90</h5>  
                     </div>
                 </div>
-                <div class="prato  princ-6" onclick="Check('.menu-pratos-principais','.princ-6')">
+                <div class="prato  princ-6" data-test="dish" onclick="Check('.menu-pratos-principais','.princ-6')">
                     <img class="prato-img" src="./imagens/frango_yin_yang.png" alt="">
                     <h3>Frango Yin Yang</h3>
                     <h4>Um pouco de batata, um pouco de salada</h4>
                     <div>
-                    <h5>R$</h5> <h5 class="preco">25,90</h5>
+                    <h5>R$</h5> <h5 class="preco" data-test="item-price" >25,90</h5>
                     </div>
                 </div>
             </div>
@@ -73,52 +73,52 @@
         <div class="container-pratos">
             <h2 class="titulo">Agora, sua bebida</h2>
             <div class="menu-bebidas">
-                <div class="prato beb-1" onclick="Check('.menu-bebidas','.beb-1')">
+                <div class="prato beb-1" data-test="drink" onclick="Check('.menu-bebidas','.beb-1')">
                     <img class="prato-img" src="./imagens/coca-cola.png" alt="">
                     <h3>Coquinha gelada</h3>
                     <h4>Lata 350ml</h4>
                     <div>
-                    <h5>R$</h5> <h5 class="preco">2,90</h5>
+                    <h5>R$</h5> <h5 class="preco" data-test="item-price" >2,90</h5>
                     </div>
                 </div>
-                <div class="prato beb-2" onclick="Check('.menu-bebidas','.beb-2')">
+                <div class="prato beb-2" data-test="drink" onclick="Check('.menu-bebidas','.beb-2')">
                     <img class="prato-img" src="./imagens/coca-cola.png" alt="">
                     <h3>Coquinha gelada</h3>
                     <h4>Lata 350ml</h4>
                     <div>
-                    <h5>R$</h5> <h5 class="preco">4,90</h5>
+                    <h5>R$</h5> <h5 class="preco" data-test="item-price" >4,90</h5>
                     </div>
                 </div>
-                <div class="prato beb-3" onclick="Check('.menu-bebidas','.beb-3')">
+                <div class="prato beb-3" data-test="drink" onclick="Check('.menu-bebidas','.beb-3')">
                     <img class="prato-img" src="./imagens/coca-cola.png" alt="">
                     <h3>Coquinha gelada</h3>
                     <h4>Lata 350ml</h4>
                     <div>
-                    <h5>R$</h5> <h5 class="preco">3,55</h5>
+                    <h5>R$</h5> <h5 class="preco" data-test="item-price" >3,55</h5>
                     </div>
                 </div>
-                <div class="prato beb-4" onclick="Check('.menu-bebidas','.beb-4')">
+                <div class="prato beb-4" data-test="drink" onclick="Check('.menu-bebidas','.beb-4')">
                     <img class="prato-img" src="./imagens/coca-cola.png" alt="">
                     <h3>Coquinha gelada</h3>
                     <h4>Lata 350ml</h4>
                     <div>
-                    <h5>R$</h5> <h5 class="preco">6,80</h5>
+                    <h5>R$</h5> <h5 class="preco" data-test="item-price" >6,80</h5>
                     </div>
                 </div>
-                <div class="prato beb-5" onclick="Check('.menu-bebidas','.beb-5')">
+                <div class="prato beb-5" data-test="drink" onclick="Check('.menu-bebidas','.beb-5')">
                     <img class="prato-img" src="./imagens/coca-cola.png" alt="">
                     <h3>Coquinha gelada</h3>
                     <h4>Lata 350ml</h4>
                     <div>
-                    <h5>R$</h5> <h5 class="preco">2,99</h5>
+                    <h5>R$</h5> <h5 class="preco" data-test="item-price" >2,99</h5>
                     </div>
                 </div>
-                <div class="prato beb-6" onclick="Check('.menu-bebidas','.beb-6')">
+                <div class="prato beb-6" data-test="drink" onclick="Check('.menu-bebidas','.beb-6')">
                     <img class="prato-img" src="./imagens/coca-cola.png" alt="">
                     <h3>Coquinha gelada</h3>
                     <h4>Lata 350ml</h4>
                     <div>
-                    <h5>R$</h5> <h5 class="preco">4,50</h5>
+                    <h5>R$</h5> <h5 class="preco" data-test="item-price" >4,50</h5>
                     </div>
                 </div>
             </div>
@@ -126,52 +126,52 @@
         <div class="container-pratos container-final">
             <h2 class="titulo">Por fim, sua sobremesa</h2>
             <div class="menu-sobremesas">
-                <div class="prato  sob-1" onclick="Check('.menu-sobremesas','.sob-1')">
+                <div class="prato  sob-1" data-test="desert" onclick="Check('.menu-sobremesas','.sob-1')">
                     <img class="prato-img" src="./imagens/pudim.png" alt="">
                     <h3>Pudim</h3>
                     <h4>Apenas pudim</h4>
                     <div>
-                    <h5>R$</h5> <h5 class="preco">7,90</h5>
+                    <h5>R$</h5> <h5 class="preco" data-test="item-price" >7,90</h5>
                     </div>
                 </div>
-                <div class="prato  sob-2 " onclick="Check('.menu-sobremesas','.sob-2')">
+                <div class="prato  sob-2 "data-test="desert"  onclick="Check('.menu-sobremesas','.sob-2')">
                     <img class="prato-img" src="./imagens/pudim.png" alt="">
                     <h3>Pudim</h3>
                     <h4>Apenas pudim</h4>
                     <div>
-                    <h5>R$</h5> <h5 class="preco">8,50</h5>
+                    <h5>R$</h5> <h5 class="preco" data-test="item-price" >8,50</h5>
                     </div>
                 </div>
-                <div class="prato  sob-3 " onclick="Check('.menu-sobremesas','.sob-3')">
+                <div class="prato  sob-3 "data-test="desert"  onclick="Check('.menu-sobremesas','.sob-3')">
                     <img class="prato-img" src="./imagens/pudim.png" alt="">
                     <h3>Pudim</h3>
                     <h4>Apenas pudim</h4>
                     <div>
-                    <h5>R$</h5> <h5 class="preco">6,80</h5>
+                    <h5>R$</h5> <h5 class="preco" data-test="item-price" >6,80</h5>
                     </div>
                 </div>
-                <div class="prato  sob-4 " onclick="Check('.menu-sobremesas','.sob-4')">
+                <div class="prato  sob-4 "data-test="desert"  onclick="Check('.menu-sobremesas','.sob-4')">
                     <img class="prato-img" src="./imagens/pudim.png" alt="">
                     <h3>Pudim</h3>
                     <h4>Apenas pudim</h4>
                     <div>
-                    <h5>R$</h5> <h5 class="preco">7,20</h5>
+                    <h5>R$</h5> <h5 class="preco" data-test="item-price" >7,20</h5>
                     </div>
                 </div>
-                <div class="prato  sob-5 " onclick="Check('.menu-sobremesas','.sob-5')">
+                <div class="prato  sob-5 "data-test="desert"  onclick="Check('.menu-sobremesas','.sob-5')">
                     <img class="prato-img" src="./imagens/pudim.png" alt="">
                     <h3>Pudim</h3>
                     <h4>Apenas pudim</h4>
                     <div>
-                    <h5>R$</h5> <h5 class="preco">7,40</h5>
+                    <h5>R$</h5> <h5 class="preco" data-test="item-price" >7,40</h5>
                     </div>
                 </div>
-                <div class="prato  sob-6 " onclick="Check('.menu-sobremesas','.sob-6')">
+                <div class="prato  sob-6 "data-test="desert"  onclick="Check('.menu-sobremesas','.sob-6')">
                     <img class="prato-img" src="./imagens/pudim.png" alt="">
                     <h3>Pudim</h3>
                     <h4>Apenas pudim</h4>
                     <div>
-                    <h5>R$</h5> <h5 class="preco">10,00</h5>
+                    <h5>R$</h5> <h5 class="preco" data-test="item-price" >10,00</h5>
                     </div>
                 </div>
             </div>
@@ -179,7 +179,7 @@
     </div>
     <div class="menu-inferior">
         <button>Selecione os 3 itens para fechar o pedido</button>
-        <button class="finalizar escondido" onclick="FinalizarPedido()">Finalizar pedido</button>
+        <button class="finalizar escondido" data-test="order-btn" onclick="FinalizarPedido()">Finalizar pedido</button>
     </div>
     <div class="confirmacao escondido">
         <h3>Confirme seu pedido</h3>
