--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         <div class="container-pratos container-final">
             <h2 class="titulo">Por fim, sua sobremesa</h2>
             <div class="menu-sobremesas">
-                <div class="prato  sob-1" data-test="desert" onclick="Check('.menu-sobremesas','.sob-1')">
+                <div class="prato  sob-1" data-test="dessert" onclick="Check('.menu-sobremesas','.sob-1')">
                     <img class="prato-img" src="./imagens/pudim.png" alt="">
                     <h3>Pudim</h3>
                     <h4>Apenas pudim</h4>
@@ -134,7 +134,7 @@
                     <h5>R$</h5> <h5 class="preco" data-test="item-price" >7,90</h5>
                     </div>
                 </div>
-                <div class="prato  sob-2 "data-test="desert"  onclick="Check('.menu-sobremesas','.sob-2')">
+                <div class="prato  sob-2 "data-test="dessert"  onclick="Check('.menu-sobremesas','.sob-2')">
                     <img class="prato-img" src="./imagens/pudim.png" alt="">
                     <h3>Pudim</h3>
                     <h4>Apenas pudim</h4>
@@ -142,7 +142,7 @@
                     <h5>R$</h5> <h5 class="preco" data-test="item-price" >8,50</h5>
                     </div>
                 </div>
-                <div class="prato  sob-3 "data-test="desert"  onclick="Check('.menu-sobremesas','.sob-3')">
+                <div class="prato  sob-3 "data-test="dessert"  onclick="Check('.menu-sobremesas','.sob-3')">
                     <img class="prato-img" src="./imagens/pudim.png" alt="">
                     <h3>Pudim</h3>
                     <h4>Apenas pudim</h4>
@@ -150,7 +150,7 @@
                     <h5>R$</h5> <h5 class="preco" data-test="item-price" >6,80</h5>
                     </div>
                 </div>
-                <div class="prato  sob-4 "data-test="desert"  onclick="Check('.menu-sobremesas','.sob-4')">
+                <div class="prato  sob-4 "data-test="dessert"  onclick="Check('.menu-sobremesas','.sob-4')">
                     <img class="prato-img" src="./imagens/pudim.png" alt="">
                     <h3>Pudim</h3>
                     <h4>Apenas pudim</h4>
@@ -158,7 +158,7 @@
                     <h5>R$</h5> <h5 class="preco" data-test="item-price" >7,20</h5>
                     </div>
                 </div>
-                <div class="prato  sob-5 "data-test="desert"  onclick="Check('.menu-sobremesas','.sob-5')">
+                <div class="prato  sob-5 "data-test="dessert"  onclick="Check('.menu-sobremesas','.sob-5')">
                     <img class="prato-img" src="./imagens/pudim.png" alt="">
                     <h3>Pudim</h3>
                     <h4>Apenas pudim</h4>
@@ -166,7 +166,7 @@
                     <h5>R$</h5> <h5 class="preco" data-test="item-price" >7,40</h5>
                     </div>
                 </div>
-                <div class="prato  sob-6 "data-test="desert"  onclick="Check('.menu-sobremesas','.sob-6')">
+                <div class="prato  sob-6 "data-test="dessert"  onclick="Check('.menu-sobremesas','.sob-6')">
                     <img class="prato-img" src="./imagens/pudim.png" alt="">
                     <h3>Pudim</h3>
                     <h4>Apenas pudim</h4>
