Versao com mensagem para whatsapp

--- a/index.html
+++ b/index.html
@@ -184,18 +184,18 @@
     <div class="confirmacao escondido">
         <h3>Confirme seu pedido</h3>
         <div>
-            <h5>Frango Yin Yang</h5><h5 class="vprinc"> valorPrincipal</h5>
+            <h5 class="pprinc"></h5><h5 class="vprinc"> </h5>
         </div>
         <div>
-            <h5>Frango Yin Yang</h5><h5 class="vbeb"> valorPrincipal</h5>
+            <h5 class="bprinc"></h5><h5 class="vbeb"> </h5>
         </div>
         <div>
-            <h5>Frango Yin Yang</h5><h5 class="vsob"> valorPrincipal</h5>
+            <h5 class="sprinc"></h5><h5 class="vsob"> </h5>
         </div>
         <div>
             <h3>Total</h3><h3 class="vtotal"> valorPrincipal</h3>
         </div>
-        <div class =pode-pedir><h3> Tudo certo, pode pedir!</h3></div>
+        <div class ="pode-pedir" onclick="Whatsapp()"><h3> Tudo certo, pode pedir!</h3></div>
         <h3 class ="cancela" onclick="window.location.reload()">Cancelar</h3>
         
         
