--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="menu-pratos-principais">
                 <div class="prato  princ-1" data-test="dish" onclick="Check('.menu-pratos-principais', '.princ-1')">
                     <img class="prato-img"  src="./imagens/frango_yin_yang.png" alt="">
-                    <h3>Frango Yin Yang</h3>
+                    <h3 data-test="item-name">Frango Yin Yang</h3>
                     <h4>Um pouco de batata, um pouco de salada</h4>
                     <div>
                     <h5>R$</h5> <h5 class="preco" data-test="item-price" >15,99</h5>
@@ -30,7 +30,7 @@
                 </div>
                 <div class="prato  princ-2" data-test="dish" onclick="Check('.menu-pratos-principais','.princ-2')">
                     <img class="prato-img" src="./imagens/frango_yin_yang.png" alt="">
-                    <h3>Frango Yin Yang</h3>
+                    <h3 data-test="item-name">Frango Yin Yang</h3>
                     <h4>Um pouco de batata, um pouco de salada</h4>
                     <div>
                     <h5>R$</h5> <h5 class="preco" data-test="item-price" >20,90</h5>
@@ -38,7 +38,7 @@
                 </div>
                 <div class="prato  princ-3" data-test="dish" onclick="Check('.menu-pratos-principais','.princ-3')">
                     <img class="prato-img" src="./imagens/frango_yin_yang.png" alt="">
-                    <h3>Frango Yin Yang</h3>
+                    <h3 data-test="item-name">Frango Yin Yang</h3>
                     <h4>Um pouco de batata, um pouco de salada</h4>
                     <div>
                     <h5>R$</h5> <h5 class="preco" data-test="item-price" >14,99</h5>
@@ -46,7 +46,7 @@
                 </div>
                 <div class="prato  princ-4" data-test="dish" onclick="Check('.menu-pratos-principais','.princ-4')">
                     <img class="prato-img" src="./imagens/frango_yin_yang.png" alt="">
-                    <h3>Frango Yin Yang</h3>
+                    <h3 data-test="item-name">Frango Yin Yang</h3>
                     <h4>Um pouco de batata, um pouco de salada</h4>
                     <div>
                     <h5>R$</h5> <h5 class="preco" data-test="item-price" >23,90</h5>
@@ -54,7 +54,7 @@
                 </div>
                 <div class="prato  princ-5" data-test="dish" onclick="Check('.menu-pratos-principais','.princ-5')">
                     <img class="prato-img" src="./imagens/frango_yin_yang.png" alt="">
-                    <h3>Frango Yin Yang</h3>
+                    <h3 data-test="item-name">Frango Yin Yang</h3>
                     <h4>Um pouco de batata, um pouco de salada</h4>
                     <div>
                     <h5>R$</h5> <h5 class="preco" data-test="item-price" >17,90</h5>  
@@ -62,7 +62,7 @@
                 </div>
                 <div class="prato  princ-6" data-test="dish" onclick="Check('.menu-pratos-principais','.princ-6')">
                     <img class="prato-img" src="./imagens/frango_yin_yang.png" alt="">
-                    <h3>Frango Yin Yang</h3>
+                    <h3 data-test="item-name">Frango Yin Yang</h3>
                     <h4>Um pouco de batata, um pouco de salada</h4>
                     <div>
                     <h5>R$</h5> <h5 class="preco" data-test="item-price" >25,90</h5>
@@ -75,7 +75,7 @@
             <div class="menu-bebidas">
                 <div class="prato beb-1" data-test="drink" onclick="Check('.menu-bebidas','.beb-1')">
                     <img class="prato-img" src="./imagens/coca-cola.png" alt="">
-                    <h3>Coquinha gelada</h3>
+                    <h3 data-test="item-name">Coquinha gelada</h3>
                     <h4>Lata 350ml</h4>
                     <div>
                     <h5>R$</h5> <h5 class="preco" data-test="item-price" >2,90</h5>
@@ -83,7 +83,7 @@
                 </div>
                 <div class="prato beb-2" data-test="drink" onclick="Check('.menu-bebidas','.beb-2')">
                     <img class="prato-img" src="./imagens/coca-cola.png" alt="">
-                    <h3>Coquinha gelada</h3>
+                    <h3 data-test="item-name">Coquinha gelada</h3>
                     <h4>Lata 350ml</h4>
                     <div>
                     <h5>R$</h5> <h5 class="preco" data-test="item-price" >4,90</h5>
@@ -91,7 +91,7 @@
                 </div>
                 <div class="prato beb-3" data-test="drink" onclick="Check('.menu-bebidas','.beb-3')">
                     <img class="prato-img" src="./imagens/coca-cola.png" alt="">
-                    <h3>Coquinha gelada</h3>
+                    <h3 data-test="item-name">Coquinha gelada</h3>
                     <h4>Lata 350ml</h4>
                     <div>
                     <h5>R$</h5> <h5 class="preco" data-test="item-price" >3,55</h5>
@@ -99,7 +99,7 @@
                 </div>
                 <div class="prato beb-4" data-test="drink" onclick="Check('.menu-bebidas','.beb-4')">
                     <img class="prato-img" src="./imagens/coca-cola.png" alt="">
-                    <h3>Coquinha gelada</h3>
+                    <h3 data-test="item-name">Coquinha gelada</h3>
                     <h4>Lata 350ml</h4>
                     <div>
                     <h5>R$</h5> <h5 class="preco" data-test="item-price" >6,80</h5>
@@ -107,7 +107,7 @@
                 </div>
                 <div class="prato beb-5" data-test="drink" onclick="Check('.menu-bebidas','.beb-5')">
                     <img class="prato-img" src="./imagens/coca-cola.png" alt="">
-                    <h3>Coquinha gelada</h3>
+                    <h3 data-test="item-name">Coquinha gelada</h3>
                     <h4>Lata 350ml</h4>
                     <div>
                     <h5>R$</h5> <h5 class="preco" data-test="item-price" >2,99</h5>
@@ -115,7 +115,7 @@
                 </div>
                 <div class="prato beb-6" data-test="drink" onclick="Check('.menu-bebidas','.beb-6')">
                     <img class="prato-img" src="./imagens/coca-cola.png" alt="">
-                    <h3>Coquinha gelada</h3>
+                    <h3 data-test="item-name">Coquinha gelada</h3>
                     <h4>Lata 350ml</h4>
                     <div>
                     <h5>R$</h5> <h5 class="preco" data-test="item-price" >4,50</h5>
@@ -128,7 +128,7 @@
             <div class="menu-sobremesas">
                 <div class="prato  sob-1" data-test="dessert" onclick="Check('.menu-sobremesas','.sob-1')">
                     <img class="prato-img" src="./imagens/pudim.png" alt="">
-                    <h3>Pudim</h3>
+                    <h3 data-test="item-name">Pudim</h3>
                     <h4>Apenas pudim</h4>
                     <div>
                     <h5>R$</h5> <h5 class="preco" data-test="item-price" >7,90</h5>
@@ -136,7 +136,7 @@
                 </div>
                 <div class="prato  sob-2 "data-test="dessert"  onclick="Check('.menu-sobremesas','.sob-2')">
                     <img class="prato-img" src="./imagens/pudim.png" alt="">
-                    <h3>Pudim</h3>
+                    <h3 data-test="item-name">Pudim</h3>
                     <h4>Apenas pudim</h4>
                     <div>
                     <h5>R$</h5> <h5 class="preco" data-test="item-price" >8,50</h5>
@@ -144,7 +144,7 @@
                 </div>
                 <div class="prato  sob-3 "data-test="dessert"  onclick="Check('.menu-sobremesas','.sob-3')">
                     <img class="prato-img" src="./imagens/pudim.png" alt="">
-                    <h3>Pudim</h3>
+                    <h3 data-test="item-name">Pudim</h3>
                     <h4>Apenas pudim</h4>
                     <div>
                     <h5>R$</h5> <h5 class="preco" data-test="item-price" >6,80</h5>
@@ -152,7 +152,7 @@
                 </div>
                 <div class="prato  sob-4 "data-test="dessert"  onclick="Check('.menu-sobremesas','.sob-4')">
                     <img class="prato-img" src="./imagens/pudim.png" alt="">
-                    <h3>Pudim</h3>
+                    <h3 data-test="item-name">Pudim</h3>
                     <h4>Apenas pudim</h4>
                     <div>
                     <h5>R$</h5> <h5 class="preco" data-test="item-price" >7,20</h5>
@@ -160,7 +160,7 @@
                 </div>
                 <div class="prato  sob-5 "data-test="dessert"  onclick="Check('.menu-sobremesas','.sob-5')">
                     <img class="prato-img" src="./imagens/pudim.png" alt="">
-                    <h3>Pudim</h3>
+                    <h3 data-test="item-name">Pudim</h3>
                     <h4>Apenas pudim</h4>
                     <div>
                     <h5>R$</h5> <h5 class="preco" data-test="item-price" >7,40</h5>
@@ -168,7 +168,7 @@
                 </div>
                 <div class="prato  sob-6 "data-test="dessert"  onclick="Check('.menu-sobremesas','.sob-6')">
                     <img class="prato-img" src="./imagens/pudim.png" alt="">
-                    <h3>Pudim</h3>
+                    <h3 data-test="item-name">Pudim</h3>
                     <h4>Apenas pudim</h4>
                     <div>
                     <h5>R$</h5> <h5 class="preco" data-test="item-price" >10,00</h5>
@@ -181,7 +181,7 @@
         <button>Selecione os 3 itens para fechar o pedido</button>
         <button class="finalizar escondido" data-test="order-btn" onclick="FinalizarPedido()">Finalizar pedido</button>
     </div>
-    <div class="confirmacao escondido">
+    <div class="confirmacao escondido" data-test="confirm-order-modal">
         <h3>Confirme seu pedido</h3>
         <div>
             <h5 class="pprinc"></h5><h5 class="vprinc"> </h5>
@@ -195,8 +195,8 @@
         <div>
             <h3>Total</h3><h3 class="vtotal"> valorPrincipal</h3>
         </div>
-        <div class ="pode-pedir" onclick="Whatsapp()"><h3> Tudo certo, pode pedir!</h3></div>
-        <h3 class ="cancela" onclick="window.location.reload()">Cancelar</h3>
+        <div class ="pode-pedir" data-test="confirm-order-btn" onclick="Whatsapp()"><h3> Tudo certo, pode pedir!</h3></div>
+        <h3 class ="cancela" data-test="cancel-order-btn" onclick="window.location.reload()">Cancelar</h3>
         
         
     </div>
